exports[`require-hook > invalid(1): import {test, describe, beforeEach} from 'node:test';\n(function () {\n\tstartServer();\n})(); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | (function () {
  3 | 	startServer();
  4 | })();

`;

exports[`require-hook > invalid(1): import {test, describe, beforeEach} from 'node:test';\n(function () {\n\tstartServer();\n})(); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | (function () {
    | ^^^^^^^^^^^^^^
> 3 | 	startServer();
    | ^^^^^^^^^^^^^^^
> 4 | })();
    | ^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(10): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { describe(\"inner\", () => { seedData(); test(\"x\", () => {}); }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | describe("s", () => { describe("inner", () => { seedData(); test("x", () => {}); }); });

`;

exports[`require-hook > invalid(10): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { describe(\"inner\", () => { seedData(); test(\"x\", () => {}); }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | describe("s", () => { describe("inner", () => { seedData(); test("x", () => {}); }); });
    |                                                 ^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(11): import {test, describe, beforeEach} from 'node:test';\nlog(\"loaded\");\ntest(\"x\", () => {}); 1`] = `

Options:
- allow:
    - 'debug'

Code:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | log("loaded");
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(11): import {test, describe, beforeEach} from 'node:test';\nlog(\"loaded\");\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | log("loaded");
    | ^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(12): import {test, describe, beforeEach} from 'node:test';\nstartServer();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | startServer();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(12): import {test, describe, beforeEach} from 'node:test';\nstartServer();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | startServer();
    | ^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(13): import {test, describe, beforeEach} from 'node:test';\nawait startServer();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | await startServer();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(13): import {test, describe, beforeEach} from 'node:test';\nawait startServer();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | await startServer();
    | ^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(14): import {test, describe, beforeEach} from 'node:test';\nawait database.connect();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | await database.connect();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(14): import {test, describe, beforeEach} from 'node:test';\nawait database.connect();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | await database.connect();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(15): import {test, describe, beforeEach} from 'node:test';\nvoid startServer();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | void startServer();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(15): import {test, describe, beforeEach} from 'node:test';\nvoid startServer();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | void startServer();
    | ^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(16): import {test, describe, beforeEach} from 'node:test';\n!startServer();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | !startServer();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(16): import {test, describe, beforeEach} from 'node:test';\n!startServer();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | !startServer();
    | ^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(17): import {test, describe, beforeEach} from 'node:test';\nvoid database.connect();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | void database.connect();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(17): import {test, describe, beforeEach} from 'node:test';\nvoid database.connect();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | void database.connect();
    | ^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(18): import {test, describe, beforeEach} from 'node:test';\n+startServer();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | +startServer();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(18): import {test, describe, beforeEach} from 'node:test';\n+startServer();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | +startServer();
    | ^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(19): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", async () => { await seedData(); test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | describe("s", async () => { await seedData(); test("x", () => {}); });

`;

exports[`require-hook > invalid(19): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", async () => { await seedData(); test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | describe("s", async () => { await seedData(); test("x", () => {}); });
    |                             ^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(2): import {test, describe, beforeEach} from 'node:test';\n(() => {\n\tstartServer();\n\ttest(\"x\", () => {});\n})(); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | (() => {
  3 | 	startServer();
  4 | 	test("x", () => {});
  5 | })();

`;

exports[`require-hook > invalid(2): import {test, describe, beforeEach} from 'node:test';\n(() => {\n\tstartServer();\n\ttest(\"x\", () => {});\n})(); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | (() => {
    | ^^^^^^^^
> 3 | 	startServer();
    | ^^^^^^^^^^^^^^^
> 4 | 	test("x", () => {});
    | ^^^^^^^^^^^^^^^^^^^^^
> 5 | })();
    | ^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(20): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { void seedData(); test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | describe("s", () => { void seedData(); test("x", () => {}); });

`;

exports[`require-hook > invalid(20): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { void seedData(); test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | describe("s", () => { void seedData(); test("x", () => {}); });
    |                       ^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(21): import {test, describe, beforeEach} from 'node:test';\nawait log(\"loaded\");\ntest(\"x\", () => {}); 1`] = `

Options:
- allow:
    - 'debug'

Code:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | await log("loaded");
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(21): import {test, describe, beforeEach} from 'node:test';\nawait log(\"loaded\");\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | await log("loaded");
    | ^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(22): import {test, describe, beforeEach} from 'node:test';\nconsole.log(\"loaded\");\ntest(\"x\", () => {}); 1`] = `

Options:
- allow:
    - 'log'

Code:
  1 | import {test, describe, beforeEach} from 'node:test';
  2 | console.log("loaded");
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(22): import {test, describe, beforeEach} from 'node:test';\nconsole.log(\"loaded\");\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | console.log("loaded");
    | ^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(23): import {test, describe, beforeEach} from 'node:test';\nawait server?.start();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | await server?.start();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(23): import {test, describe, beforeEach} from 'node:test';\nawait server?.start();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | await server?.start();
    | ^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(24): import {test, describe, beforeEach} from 'node:test';\nvoid server?.start();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | void server?.start();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(24): import {test, describe, beforeEach} from 'node:test';\nvoid server?.start();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | void server?.start();
    | ^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(25): import {test, describe, beforeEach} from 'node:test';\n!server?.start();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | !server?.start();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(25): import {test, describe, beforeEach} from 'node:test';\n!server?.start();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | !server?.start();
    | ^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(26): import {test, describe, beforeEach} from 'node:test';\ntypeof server?.start?.();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | typeof server?.start?.();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(26): import {test, describe, beforeEach} from 'node:test';\ntypeof server?.start?.();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | typeof server?.start?.();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(27): import {test, describe, beforeEach} from 'node:test';\nawait (startServer() as Promise<void>);\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | await (startServer() as Promise<void>);
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(27): import {test, describe, beforeEach} from 'node:test';\nawait (startServer() as Promise<void>);\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | await (startServer() as Promise<void>);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(28): import {test, describe, beforeEach} from 'node:test';\nvoid (startServer() as unknown);\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | void (startServer() as unknown);
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(28): import {test, describe, beforeEach} from 'node:test';\nvoid (startServer() as unknown);\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | void (startServer() as unknown);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(29): import {describe} from 'node:test';\ndescribe({name: 'a', fn() { setup(); }}); 1`] = `

  1 | import {describe} from 'node:test';
  2 | describe({name: 'a', fn() { setup(); }});

`;

exports[`require-hook > invalid(29): import {describe} from 'node:test';\ndescribe({name: 'a', fn() { setup(); }}); 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | describe({name: 'a', fn() { setup(); }});
    |                             ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(3): import {test, describe, beforeEach} from 'node:test';\n[1].forEach(() => { startServer(); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | [1].forEach(() => { startServer(); });

`;

exports[`require-hook > invalid(3): import {test, describe, beforeEach} from 'node:test';\n[1].forEach(() => { startServer(); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | [1].forEach(() => { startServer(); });
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(30): import {describe} from 'node:test';\ndescribe('a', {fn() { setup(); }}); 1`] = `

  1 | import {describe} from 'node:test';
  2 | describe('a', {fn() { setup(); }});

`;

exports[`require-hook > invalid(30): import {describe} from 'node:test';\ndescribe('a', {fn() { setup(); }}); 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | describe('a', {fn() { setup(); }});
    |                       ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(31): import {suite} from 'node:test';\nsuite('a', {fn() { setup(); }}); 1`] = `

  1 | import {suite} from 'node:test';
  2 | suite('a', {fn() { setup(); }});

`;

exports[`require-hook > invalid(31): import {suite} from 'node:test';\nsuite('a', {fn() { setup(); }}); 2`] = `

Message:
  1 | import {suite} from 'node:test';
> 2 | suite('a', {fn() { setup(); }});
    |                    ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(32): import {test} from 'node:test';\nconsole.log('top level');\ntest('a', () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | console.log('top level');
  3 | test('a', () => {});

`;

exports[`require-hook > invalid(32): import {test} from 'node:test';\nconsole.log('top level');\ntest('a', () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | console.log('top level');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test('a', () => {});

`;

exports[`require-hook > invalid(33): import {describe} from 'node:test';\nconst body = () => { setup(); };\ndescribe('s', body); 1`] = `

  1 | import {describe} from 'node:test';
  2 | const body = () => { setup(); };
  3 | describe('s', body);

`;

exports[`require-hook > invalid(33): import {describe} from 'node:test';\nconst body = () => { setup(); };\ndescribe('s', body); 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | const body = () => { setup(); };
    |                      ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | describe('s', body);

`;

exports[`require-hook > invalid(34): import {describe} from 'node:test';\ndescribe('s', body);\nfunction body() { setup(); } 1`] = `

  1 | import {describe} from 'node:test';
  2 | describe('s', body);
  3 | function body() { setup(); }

`;

exports[`require-hook > invalid(34): import {describe} from 'node:test';\ndescribe('s', body);\nfunction body() { setup(); } 2`] = `

Message:
  1 | import {describe} from 'node:test';
  2 | describe('s', body);
> 3 | function body() { setup(); }
    |                   ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(35): import {describe} from 'node:test';\nconst body = () => { setup(); };\ndescribe('s', {fn: body}); 1`] = `

  1 | import {describe} from 'node:test';
  2 | const body = () => { setup(); };
  3 | describe('s', {fn: body});

`;

exports[`require-hook > invalid(35): import {describe} from 'node:test';\nconst body = () => { setup(); };\ndescribe('s', {fn: body}); 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | const body = () => { setup(); };
    |                      ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | describe('s', {fn: body});

`;

exports[`require-hook > invalid(36): import {describe} from 'node:test';\nconst body = () => { setup(); };\ndescribe('s', body, {skip: true}); 1`] = `

  1 | import {describe} from 'node:test';
  2 | const body = () => { setup(); };
  3 | describe('s', body, {skip: true});

`;

exports[`require-hook > invalid(36): import {describe} from 'node:test';\nconst body = () => { setup(); };\ndescribe('s', body, {skip: true}); 2`] = `

Message:
  1 | import {describe} from 'node:test';
> 2 | const body = () => { setup(); };
    |                      ^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | describe('s', body, {skip: true});

`;

exports[`require-hook > invalid(4): import {test, describe, beforeEach} from 'node:test';\nstartServer();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | startServer();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(4): import {test, describe, beforeEach} from 'node:test';\nstartServer();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | startServer();
    | ^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(5): import {test, describe, beforeEach} from 'node:test';\nregister(test(\"x\", () => {})); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | register(test("x", () => {}));

`;

exports[`require-hook > invalid(5): import {test, describe, beforeEach} from 'node:test';\nregister(test(\"x\", () => {})); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | register(test("x", () => {}));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(6): import * as nodeTest from 'node:test';\nseedData();\nnodeTest.test(\"x\", () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | seedData();
  3 | nodeTest.test("x", () => {});

`;

exports[`require-hook > invalid(6): import * as nodeTest from 'node:test';\nseedData();\nnodeTest.test(\"x\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | seedData();
    | ^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | nodeTest.test("x", () => {});

`;

exports[`require-hook > invalid(7): import {test, describe, beforeEach} from 'node:test';\nsuite(\"s\", () => { seedData(); test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | suite("s", () => { seedData(); test("x", () => {}); });

`;

exports[`require-hook > invalid(7): import {test, describe, beforeEach} from 'node:test';\nsuite(\"s\", () => { seedData(); test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | suite("s", () => { seedData(); test("x", () => {}); });
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(8): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { seedData(); test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | describe("s", () => { seedData(); test("x", () => {}); });

`;

exports[`require-hook > invalid(8): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { seedData(); test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | describe("s", () => { seedData(); test("x", () => {}); });
    |                       ^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.

`;

exports[`require-hook > invalid(9): import {test, describe, beforeEach} from 'node:test';\ndatabase.connect();\ntest(\"x\", () => {}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | database.connect();
  3 | test("x", () => {});

`;

exports[`require-hook > invalid(9): import {test, describe, beforeEach} from 'node:test';\ndatabase.connect();\ntest(\"x\", () => {}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | database.connect();
    | ^^^^^^^^^^^^^^^^^^^ This runs when the file is loaded, not as part of a test. Move it into a \`before\`, \`beforeEach\`, \`after\`, or \`afterEach\` hook.
  3 | test("x", () => {});

`;
